--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "3.4.3",
     "react-three-fiber": "^5.0.3",
     "three": "^0.121.1",
+    "three-mmd-loader": "^0.0.11",
     "typescript": "~3.7.2"
   },
   "scripts": {
