--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "@material-ui/icons": "^4.9.1",
     "@react-three/drei": "^2.1.1-beta.3",
     "@types/react-grid-layout": "^1.1.1",
+    "@types/react-measure": "^2.0.6",
     "electron-is-dev": "^1.2.0",
     "electron-store": "^6.0.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-grid-layout": "^1.1.1",
+    "react-measure": "^2.5.2",
     "react-three-fiber": "^5.0.3",
     "react-three-gui": "^0.3.1",
     "three": "^0.121.1"
